--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 #background{
-    min-height: 1050px;
-    width: 100%;
+    min-height: 100vh;
+    width: 100vw;
    
 }
 #top{
@@ -240,7 +240,7 @@
 }
 @media screen and (max-width:600px){
     #top{
-        width: 430px;
+        width: 100%;
         /* background: red; */
         /* height: 20px; */
         font-size:12px;
